fix paragraph alignment

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -11,7 +11,7 @@
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     justify-items: center;
-    align-items: start;
+    align-items: center;
     gap: 30px;
     @media (min-width: 601px) {
         grid-template-columns: 3fr 2fr;
